Moved configuration to use environment variables rather than a config file

--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,22 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
+// Build and run the application
 task runApp(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-
     main = 'org.lockss.Main'
+}
 
+// Create a single Jar with all dependencies
+task fatJar(type: Jar) {
+        manifest {
+        attributes 'Implementation-Title': 'LOCKSS Solr',  
+                'Implementation-Version': version,
+                'Main-Class': 'org.lockss.Main'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
 
 sourceCompatibility = 1.8
